--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.24.7",
     "@biconomy/account": "^4.0.0",
     "@walletconnect/sign-client": "^2.4.7",
     "@web3auth/modal": "^7.3.1",
@@ -17,10 +18,12 @@
     "next-router": "^1.3.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "viem": "^2.17.3"
   },
   "devDependencies": {
     "@types/node": "^20",
